# Pixelite

./: .clang-format  CMakeLists.txt  ColorPalette.cpp  ColorPalette.h  ColorSelector.cpp  ColorSelector.h  DrawPane.cpp  DrawPane.h  NewImageDialog.cpp  NewImageDialog.h  NewImageDialog.ui  Pixelite.cpp  Pixelite.h  Pixelite.qrc  Pixelite.ui  PixeliteMain.cpp  README.md
